--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lint": "eslint --ext .js,.vue src test/unit test/e2e/specs"
   },
   "dependencies": {
+    "dotenv": "^6.0.0",
     "express": "^4.16.2",
     "morgan": "^1.9.0",
     "pm2": "^2.10.4",
@@ -31,6 +32,7 @@
     "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
+    "@types/dotenv": "^4.0.3",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
@@ -52,6 +54,7 @@
     "cross-env": "^5.1.4",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.11",
+    "dotenv-webpack": "^1.5.7",
     "es6-promise": "^4.2.4",
     "eslint": "^4.15.0",
     "eslint-config-standard": "^10.2.1",
