--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "dependencies": {
     "dotenv": "^6.0.0",
     "express": "^4.16.2",
+    "js-base64": "^2.4.9",
+    "js-cookie": "^2.2.0",
     "morgan": "^1.9.0",
     "pm2": "^2.10.4",
     "raven-js": "^3.26.3",
@@ -32,6 +34,8 @@
   },
   "devDependencies": {
     "@types/dotenv": "^4.0.3",
+    "@types/js-base64": "^2.3.1",
+    "@types/js-cookie": "^2.2.0",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
